--- a/src/app/auth/components/pages/register-utilisateur/register-utilisateur.component.html
+++ b/src/app/auth/components/pages/register-utilisateur/register-utilisateur.component.html
@@ -8,13 +8,13 @@
     <div>
         <label for="">
             <p>Prenom :</p>
-            <input type="text" formControlName="Prenom">
+            <input type="text" formControlName="prenom">
         </label>
     </div>
     <div>
         <label for="">
             <p>Date de naissance :</p>
-            <input type="text" formControlName="dateNaissance">
+            <input type="date" formControlName="dateNaissance">
         </label>
     </div>
     <div>
