--- a/src/app/components/pages/home/accueil/accueil.component.html
+++ b/src/app/components/pages/home/accueil/accueil.component.html
@@ -5,13 +5,15 @@
             <th>Nom</th>
             <th>Description</th>
             <th>Utilisateur</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let article of articles">
-            <th>{{article.nom}}</th>
-            <th>{{article.description}}</th>
-            <th>{{article.id_utilisateur}}</th>
+            <td>{{article.nom}}</td>
+            <td>{{article.description}}</td>
+            <td>{{article.id_utilisateur}}</td>
+            <td><a [routerLink]="'/article/detail/' + article.id">Details</a></td>
         </tr>
     </tbody>
 </table>
