--- a/src/app/components/shared/navigation-menu/navigation-menu.component.html
+++ b/src/app/components/shared/navigation-menu/navigation-menu.component.html
@@ -7,4 +7,5 @@
             </app-nav-item>
         </li>
     </ul>
+    <p *ngIf="isConnected"><button (click)="logout">Déconnexion</button></p>
 </nav>
