--- a/src/app/modules/main/components/shared/navigation-menu/navigation-menu.component.html
+++ b/src/app/modules/main/components/shared/navigation-menu/navigation-menu.component.html
@@ -7,5 +7,8 @@
             </app-nav-item>
         </li>
     </ul>
-    <p *ngIf="isConnected"><button (click)="logout">Déconnexion</button></p>
+    
 </nav>
+<p *ngIf="isConnected">
+    <button (click)="logout()">Déconnexion</button>
+</p>
