--- a/src/app/modules/main/components/shared/navigation-menu/navigation-menu.component.html
+++ b/src/app/modules/main/components/shared/navigation-menu/navigation-menu.component.html
@@ -1,14 +1,14 @@
 <!-- nav>ul>(li>a>div)*2 -->
 <nav>
-    <ul>
-        <li *ngFor="let navItem of routes">
+    <ul class="nav justify-content-center">
+        <li *ngFor="let navItem of routes" class="nav-item">
             <app-nav-item *ngIf="navItem.isVisible" [navItem]="navItem">
                 <img *ngIf="navItem.imgSrc" [src]="navItem.imgSrc">
             </app-nav-item>
         </li>
     </ul>
-    
 </nav>
 <p *ngIf="isConnected">
     <button (click)="logout()">Déconnexion</button>
 </p>
+
