--- a/src/app/modules/article/components/pages/liste/liste.component.html
+++ b/src/app/modules/article/components/pages/liste/liste.component.html
@@ -12,7 +12,7 @@
         <tr *ngFor="let article of articles">
             <td>{{article.nom}}</td>
             <td>{{article.description}}</td>
-            <td>{{article.id_utilisateur}}</td>
+            <td>{{article.nomCreateur}}</td>
             <td><a [routerLink]="'/article/detail/' + article.id">Details</a></td>
         </tr>
     </tbody>
