--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
-<div class="MainBody">
-    <div class="BodyLeft">
-        <app-navigation-menu></app-navigation-menu>
-    </div>
-    <div class="BodyRight">
-        <router-outlet></router-outlet>
-    </div>
+<div>
+    <app-navigation-menu></app-navigation-menu>
+</div>
+<div>
+    <router-outlet></router-outlet>
 </div>
