--- a/src/app/modules/article/components/pages/detail/detail.component.html
+++ b/src/app/modules/article/components/pages/detail/detail.component.html
@@ -45,7 +45,9 @@
     </form>
     <div>
         <ul *ngIf="commentaires.length > 0; else ngPasdeCommentaire">
-            <li *ngFor="let commentaire of commentaires">{{commentaire.nomCreateur}} : {{commentaire.commentaire}} [{{commentaire.date_envoi}}]</li>
+            <li *ngFor="let commentaire of commentaires">
+                {{commentaire.nomCreateur}} : {{commentaire.commentaire}} [{{commentaire.date_envoi}}]
+            </li>
         </ul>
         <ng-template #ngPasdeCommentaire>
             <p>Il n'y a encore de commentaires pour cet article</p>
