--- a/src/app/modules/article/components/pages/liste/liste.component.html
+++ b/src/app/modules/article/components/pages/liste/liste.component.html
@@ -1,20 +1,7 @@
 <h1>Liste des articles</h1>
-<table>
-    <thead>
-        <tr>
-            <th>Nom</th>
-            <th>Description</th>
-            <th>Utilisateur</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let article of articles">
-            <td>{{article.nom}}</td>
-            <td>{{article.description}}</td>
-            <td>{{article.nomCreateur}}</td>
-            <td><a [routerLink]="'/article/detail/' + article.id">Details</a></td>
-        </tr>
-    </tbody>
-</table>
 
+<div class="container">
+    <div class="row">
+        <app-item *ngFor="let article of articles" [articleItem]="article" class="col-3 col-lg-3 col-md-4 col-sm-6"></app-item>
+    </div>
+</div>
