--- a/src/app/modules/auth/components/pages/login-utilisateur/login-utilisateur.component.html
+++ b/src/app/modules/auth/components/pages/login-utilisateur/login-utilisateur.component.html
@@ -1,15 +1,23 @@
-<form [formGroup]="LoginForm" (ngSubmit)="login()">
-    <div>
-        <label for="">
-            <p>Email :</p>
-            <input type="text" formControlName="email">
-        </label>
+<div class="container">
+    <div class=" row justify-content-center">
+        <div class="col-4">
+                <main class="form-signin text-center">
+                <form [formGroup]="LoginForm" (ngSubmit)="login()">
+                  <img class="mb-4 m-5" src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+                  <h1 class="h2 mb-3 fw-normal">Connexion</h1>
+              
+                  <div class="form-floating">
+                    <input type="email" formControlName="email" class="form-control mb-4" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">E-mail :</label>
+                  </div>
+                  <div class="form-floating">
+                    <input  type="password" formControlName="password" class="form-control mb-4" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Mot de passe :</label>
+                  </div>
+                  <input class="w-100 btn btn-lg btn-primary" type="submit"value="Connection">
+                </form>
+              </main>
+        </div>
     </div>
-    <div>
-        <label type="">
-            <p>Password :</p>
-            <input type="password" formControlName="password">
-        </label>
-    </div>
-    <input type="submit" value="Connection">
-</form>
+</div>
+
