--- a/src/app/modules/auth/components/pages/register-utilisateur/register-utilisateur.component.html
+++ b/src/app/modules/auth/components/pages/register-utilisateur/register-utilisateur.component.html
@@ -1,39 +1,43 @@
-<form [formGroup]="registerForm" (ngSubmit)="register()">
-    <div>
-        <label for="">
-            <p>Nom :</p>
-            <input type="text" formControlName="nom">
-        </label>
-    </div>
-    <div>
-        <label for="">
-            <p>Prenom :</p>
-            <input type="text" formControlName="prenom">
-        </label>
-    </div>
-    <div>
-        <label for="">
-            <p>Date de naissance :</p>
-            <input type="date" formControlName="dateNaissance">
-        </label>
-    </div>
-    <div>
-        <label for="">
-            <p>Email :</p>
-            <input type="text" formControlName="email">
-        </label>
-    </div>
-    <div>
-        <label type="">
-            <p>Mot de passe :</p>
-            <input type="password" formControlName="password">
-        </label>
-    </div>
-    <div>
-        <label type="">
-            <p>Confirmer mot de passe :</p>
-            <input type="password" formControlName="confirmPassword">
-        </label>
-    </div>
-    <input type="submit" value="Connection">
-</form>
+<div class="container">
+  <div class=" row justify-content-center">
+      <div class="col-4">
+          <body class="text-center">
+              <main class="form-signin">
+              <form [formGroup]="registerForm" (ngSubmit)="register()">
+                <img class="mb-4 m-5" src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+                <h1 class="h2 mb-3 fw-normal">Inscription</h1>
+
+                <div class="form-floating m-2">
+                  <input type="text " formControlName="nom" class="form-control" id="floatingInput" placeholder="Dupont">
+                  <label for="floatingInput">Nom :</label>
+                </div>
+                <div class="form-floating m-2">
+                  <input type="text" formControlName="prenom" class="form-control" id="floatingInput" placeholder="Jean">
+                  <label for="floatingInput">Prénom :</label>
+                </div>
+                <div class="form-floating m-2">
+                  <input type="date" formControlName="prenom" class="form-control" id="floatingInput" placeholder="Date">
+                  <label for="floatingInput">Date de naissance :</label>
+                </div>
+                <div class="form-floating m-2">
+                  <input type="email" formControlName="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                  <label for="floatingInput">E-mail :</label>
+                </div>
+                <div class="form-floating m-2">
+                  <input type="password" formControlName="password" class="form-control" id="floatingPassword" placeholder="Password">
+                  <label for="floatingPassword">Mot de passe :</label>
+                </div>
+                <div class="form-floating m-2">
+                  <input type="password" formControlName="password" class="form-control" id="floatingPassword" placeholder="Password">
+                  <label for="floatingPassword">Confirmer Mot de passe :</label>
+                </div>
+            
+                <div class="checkbox mb-3 m-2">
+                  <input class="w-100 btn btn-lg btn-primary" type="submit"value="S'enregistrer">
+                </div>
+              </form>
+            </main>
+          </body>
+      </div>
+  </div>
+</div>
