--- a/src/app/modules/main/components/pages/home/accueil/accueil.component.html
+++ b/src/app/modules/main/components/pages/home/accueil/accueil.component.html
@@ -1,19 +1,40 @@
-<h1>Liste des articles</h1>
-<table>
-    <thead>
-        <tr>
-            <th>Nom</th>
-            <th>Description</th>
-            <th>Utilisateur</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let article of articles">
-            <td>{{article.nom}}</td>
-            <td>{{article.description}}</td>
-            <td>{{article.id_utilisateur}}</td>
-            <td><a [routerLink]="'/article/detail/' + article.id">Details</a></td>
-        </tr>
-    </tbody>
-</table>
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner ">
+      <div class="carousel-item active ">
+        <img src="/assets/slide1.jpg" class="" width="100%" height="auto"  alt="image">
+        <div class="container">
+          <div class="carousel-caption text-start">
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/assets/slide2.jpg" class="" width="100%" height="auto"  alt="image">
+
+        <div class="container">
+          <div class="carousel-caption">
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/assets/slide3.jpg" class="" width="100%" height="auto"  alt="image">
+
+        <div class="container">
+          <div class="carousel-caption text-end">
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
