--- a/src/app/modules/main/components/shared/nav-item/nav-item.component.html
+++ b/src/app/modules/main/components/shared/nav-item/nav-item.component.html
@@ -1,11 +1,18 @@
-<a routerLink="{{parentUrl}}{{navItem.url}}">
-    <ng-content></ng-content>
-    <div>{{navItem.title}}</div>
-</a>
-<ul *ngIf="navItem.children">
-    <li *ngFor="let navItemChild of navItem.children" class="nav-item">
-        <app-nav-item parentUrl="{{parentUrl}}{{navItem.url}}" [navItem]="navItemChild">
-            <img *ngIf="navItemChild.imgSrc" [src]="navItemChild.imgSrc">
-        </app-nav-item>
-    </li>
-</ul>
+<div *ngIf="navItem.children;else ngNotChidren" class="dropdown">
+    <a class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown"  routerLink="{{parentUrl}}{{navItem.url}}" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+        {{navItem.title}}
+    </a>
+    <ul *ngIf="navItem.children"  class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li *ngFor="let navItemChild of navItem.children" class="dropdown-item">
+            <app-nav-item parentUrl="{{parentUrl}}{{navItem.url}}" [navItem]="navItemChild">
+                <img *ngIf="navItemChild.imgSrc" [src]="navItemChild.imgSrc">
+            </app-nav-item>
+        </li>
+    </ul>
+</div>
+
+<ng-template #ngNotChidren>
+    <a class="btn btn-outline-primary"  routerLink="{{parentUrl}}{{navItem.url}}" id="dropdownMenuButton1">
+        {{navItem.title}}
+    </a>
+</ng-template>
