--- a/src/app/modules/article/components/pages/item/item.component.html
+++ b/src/app/modules/article/components/pages/item/item.component.html
@@ -1,11 +1,11 @@
 <div>
-    <div class="text-center m-2 border border-dark border-1">
+    <div class="text-center m-1 border border-dark border-1 rounded-3 bg-dark">
         <div class="col-10 m-auto">
-            <a [routerLink]="'/article/detail/' + articleItem.id">
-                <img [src]="getImageToShow()" class="img-thumbnail" alt="image" width="100%" height="auto">
+            <a  [routerLink]="'/article/detail/' + articleItem.id ">
+                <img [src]="imageSource" class="img-thumbnail mt-1" alt="image" width="100%" height="auto">
             </a>
             <div class="d-flex">
-                <span class="ml-2 flex-grow-1 text-start">{{articleItem.nom}}</span>
+                <span class="ml-2 flex-grow-1 text-start" style="color: white;">{{articleItem.nom}}</span>
                 <a class="ml-3" [routerLink]="'/article/listeByUser/' + articleItem.id_utilisateur">{{articleItem.nomCreateur}}</a>
             </div>
         </div>
