--- a/src/app/modules/main/components/shared/nav-item/nav-item.component.html
+++ b/src/app/modules/main/components/shared/nav-item/nav-item.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <ng-template #ngNotChidren>
-    <a class="btn btn-outline-primary"  routerLink="{{parentUrl}}{{navItem.url}}" id="dropdownMenuButton1">
+    <a class="btn btn-outline-danger m-3"  routerLink="{{parentUrl}}{{navItem.url}}" id="dropdownMenuButton1">
         {{navItem.title}}
     </a>
 </ng-template>
