--- a/src/app/modules/article/components/pages/liste/liste.component.html
+++ b/src/app/modules/article/components/pages/liste/liste.component.html
@@ -1,7 +1,7 @@
-<h1>Liste des articles</h1>
+<h1 class="text-center m-3">Liste des articles</h1>
 
 <div class="container">
     <div class="row">
-        <app-item *ngFor="let article of articles" [articleItem]="article" class="col-3 col-lg-3 col-md-4 col-sm-6"></app-item>
+        <app-item *ngFor="let article of articles" [articleItem]="article" class="col-3 col-lg-3 col-md-4 col-sm-6 "></app-item>
     </div>
 </div>
