--- a/src/app/modules/main/components/shared/navigation-menu/navigation-menu.component.html
+++ b/src/app/modules/main/components/shared/navigation-menu/navigation-menu.component.html
@@ -1,7 +1,9 @@
 <!-- nav>ul>(li>a>div)*2 -->
-<nav class="navbar navbar-expand-md navbar-dark sticky bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark sticky bg-dark ">
 <div class="container-fluid">
-    <a class="navbar-brand" href="#">Make 3D</a>
+    <a class="navbar-brand" href="#">
+        <img src="/assets/logo_texte_petit.png" alt="image" width="100%" height="auto">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,7 +18,7 @@
         <!---->
     </ul>
     <p *ngIf="isConnected" class="m-1 align">
-        <button class="btn btn-outline-danger" (click)="logout()">Déconnexion</button>
+        <button class="btn btn-outline-warning" (click)="logout()">Déconnexion</button>
     </p>
     </div>
 </div>
