--- a/src/app/modules/article/components/pages/commentaire/commentaire.component.html
+++ b/src/app/modules/article/components/pages/commentaire/commentaire.component.html
@@ -1,8 +1,8 @@
-<div class="card">
+<div class="card m-2">
     <div class="card-header">
         {{commentaire.nomCreateur}} :  [{{commentaire.date_envoi}}]
     </div>
-    <div class="card-body">
+    <div class="card-body ">
         {{commentaire.commentaire}}
     </div>
 </div>
