--- a/src/app/modules/main/components/pages/home/accueil/accueil.component.html
+++ b/src/app/modules/main/components/pages/home/accueil/accueil.component.html
@@ -1,7 +1,5 @@
-<div>
-  
-</div>
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+<div class="container">
+  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -41,3 +39,40 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+  <hr class="featurette-divider">
+
+    <div class="row align-items-center p-5">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">découvrez des projets</h2>
+      </div>
+      <div class="col-md-5">
+        <img src="/assets/accueil_1.jpg" class="" width="100%" height="auto"  alt="image">
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row align-items-center p-5">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading text-end">Partagez vos créations</h2>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <img src="/assets/accueil_2.jpg" class="" width="100%" height="auto"  alt="image">
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div class="row align-items-center p-5">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Bientot Sur <span style="color: rgb(255, 0, 0);">Make3D</span></h2>
+        <p>Partagez vos codes arduino liés a vos créations 3D.</p>
+      </div>
+      <div class="col-md-5">
+        <img src="/assets/accueil_3.png" class="" width="100%" height="auto"  alt="image">
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+</div>
