--- a/src/app/modules/utilisateur/components/pages/profil-utilisateur/profil-utilisateur.component.html
+++ b/src/app/modules/utilisateur/components/pages/profil-utilisateur/profil-utilisateur.component.html
@@ -1,28 +1,18 @@
-<div>
-    <dl>
-        <dt>
-            Nom :
-        </dt>
-        <dd>
-            {{utilisateur.nom}}
-        </dd>
-        <dt>
-            Pénom :
-        </dt>
-        <dd>
-            {{utilisateur.prenom}}
-        </dd>
-        <dt>
-            Email :
-        </dt>
-        <dd>
-            {{utilisateur.email}}
-        </dd>
-        <dt>
-            Date de naissance :
-        </dt>
-        <dd>
-            {{utilisateur.dateNaissance}}
-        </dd>
-    </dl>
+<div class="container p-5 d-flex justify-content-center">
+    <div class="profil col-6">
+        <h1 class="text-center">Mes informations</h1>
+        <div class="form-floating mb-3">
+            <p>Nom : {{utilisateur.nom}}</p>
+        </div>
+        <div class="form-floating mb-3">
+            Prénom : {{utilisateur.prenom}}
+        </div>
+        <div class="form-floating mb-3">
+            E-mail : {{utilisateur.email}}
+        </div>
+        <div class="form-floating mb-3">
+            Date de naissance : {{utilisateur.dateNaissance}}
+        </div>
+    </div>
 </div>
+
