--- a/src/app/modules/article/components/pages/detail/detail.component.html
+++ b/src/app/modules/article/components/pages/detail/detail.component.html
@@ -1,69 +1,85 @@
-<div>
-    <dl>
-        <dt>
-            Titre :
-        </dt>
-        <dd>
-            {{article.nom}}
-        </dd>
-        <dt>
-            Description :
-        </dt>
-        <dd>
-            {{article.description}}
-        </dd>
-        <dt>
-            Créateur :
-        </dt>
-        <dd>
-            {{article.nomCreateur}}
-        </dd>
-    </dl>
-</div>
-<div *ngIf="estCreateur; else estPasCreateur">
-    <button (click)="update()">Modifier</button>
-    <button (click)="delete()">Supprimer</button>
-</div>
-<ng-template #estPasCreateur>
-    <div *ngIf="!estSignaleParUserId;else estSignale">
-        <button (click)="signalement()">Signaler</button>
-    </div>
-</ng-template>
-
-<ng-template #estSignale>
-    <button (click)="designaler()">Designaler</button>
-</ng-template>
-<p>
-    <a [routerLink]="'/home/'">Accueil</a>
-</p>
-
-<div *ngIf="imageSources && imageSources.length > 0">
-    <h4>Liste des fichiers</h4>
-    <hr />
+<div class="p-2">
     <div class="container">
-        <div class="row">
-            <div *ngFor="let imageSource of imageSources" class="col-3 col-lg-3 col-md-4 col-sm-6 ">
-                <img [src]="imageSource" class="img-thumbnail mt-1" alt="image@id_fichier" width="100%" height="auto">
+        <div class="MainBody">
+            <div class="bodyLeft">
+                <div class="">
+                    <div *ngIf="imageSources && imageSources.length > 0 else notImage">
+                        <div *ngFor="let imageSource of imageSources" class="col-3 col-lg-3 col-md-4 col-sm-6 " class="img-thumbnail mt-1" alt="image" width="100%" >
+                            <img [src]="imageSource" class="" alt="image@id_fichier" width="100%" height="auto">
+                        </div>
+                    </div>
+                    <ng-template #notImage>
+                        <div>
+                            <img src="/assets/default.jpg" class="" alt="image@id_fichier" width="100%" height="auto">
+                        </div>
+                        <hr/>
+                    </ng-template>
+                </div>
+            </div>
+            <div class="bodyRight">
+                <h3 class="text-center p-2">{{article.nom}}({{article.nomCreateur}})</h3>
+                <div>
+                    <dl>
+                        <dt>
+                            Description :
+                        </dt>
+                        <dd>
+                            {{article.description}}
+                        </dd>
+                    </dl>
+                </div>
             </div>
         </div>
-    </div>
-
-</div>
-
-<div>
-    <h1>Commentaires</h1>
-    <form [formGroup]="commentaireForm" (ngSubmit)="envoyerCommentaire()">
-        <input type="text" placeholder="Veuillez entrer votre commentaire ici..." formControlName="commentaire">
-        <input type="submit" value="Envoyer">
-    </form>
-    <div *ngIf="commentaires.length > 0; else ngPasdeCommentaire">
         <div class="container">
-            <app-commentaire *ngFor="let commentaire of commentaires" [commentaire]="commentaire" class="center col-8"></app-commentaire>
+            <div class="row justify-content-center">
+                <div class="p-1 col-8">
+                    <div *ngIf="estCreateur; else estPasCreateur">
+                        <hr/>
+                        <div class="p-1">
+                            <button class="w-100 btn btn-lg btn-dark" (click)="update()">Modifier</button>
+                        </div>
+                        <div class="p-1">
+                            <button class="w-100 btn btn-lg btn-danger" (click)="delete()">Supprimer</button>
+                        </div>
+                        <hr/>
+                    </div>
+                    <ng-template #estPasCreateur>
+                        <hr/>
+                        <div *ngIf="!estSignaleParUserId;else estSignale">
+                            <button class="w-100 btn btn-lg btn-warning" (click)="signalement()">Signaler</button>
+                        </div>
+                        <hr/>
+                    </ng-template>
+                    <ng-template #estSignale>
+                        <button class="w-100 btn btn-lg btn-success" (click)="designaler()">Designaler</button>
+                    </ng-template>
+                </div>
+            </div>
         </div>
+        <div class="commentaire">
+            <h1 style="color: white;" class="text-center">Commentaires</h1>
+            <form class="m-2" [formGroup]="commentaireForm" (ngSubmit)="envoyerCommentaire()">
+
+                <div class="form-floating mb-3">
+                    <textarea type="text" formControlName="commentaire" class="form-control" id="floatingTextarea2"  placeholder="Description de mon projet..."  style="height: 80px"></textarea>
+                    <label for="floatingTextarea2">écrivez votre commentaire ici :</label>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-6 p-2">
+                        <input class="w-100 btn btn btn-primary" type="submit" value="Envoyer">
+                    </div>
+                </div>
+            </form>
+            <div *ngIf="commentaires.length > 0; else ngPasdeCommentaire">
+                <div class="">
+                    <app-commentaire *ngFor="let commentaire of commentaires" [commentaire]="commentaire" class="center col-8"></app-commentaire>
+                </div>
+                </div>
+            <ng-template #ngPasdeCommentaire>
+                <div class="text-center m-5" style="color: rgb(255, 0, 0);">
+                    <p>Il n'y pas encore de commentaires pour cet article...</p>
+                </div>
+            </ng-template>
         </div>
-    <ng-template #ngPasdeCommentaire>
-        <div>
-            <p>Il n'y a encore de commentaires pour cet article</p>
-        </div>
-    </ng-template>
+    </div>
 </div>
