--- a/src/app/modules/main/components/shared/navigation-menu/navigation-menu.component.html
+++ b/src/app/modules/main/components/shared/navigation-menu/navigation-menu.component.html
@@ -1,5 +1,5 @@
 <!-- nav>ul>(li>a>div)*2 -->
-<nav class="navbar navbar-expand-md navbar-dark sticky bg-dark ">
+<nav class="navbar navbar-expand-md navbar-dark sticky" style="background-color: rgb(22, 22, 22);">
 <div class="container-fluid">
     <a class="navbar-brand" href="#">
         <img src="/assets/logo_texte_petit.png" alt="image" width="100%" height="auto">
